feat: add rust check hook

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -5,3 +5,10 @@
   language: system
   types: [rust]
   args: ["--"]
+- id: rust-check
+  name: rust check
+  description: Check Rust package for errors.
+  entry: cargo check
+  language: system
+  types: [rust]
+  pass_filenames: false
